data/derived/fa15/progs/unify/prog3077.ml.out
Characters 122-123:
  cloneHelper 0  (-1*(diff)-1) (l1 @ 0)
                                     ^
Error: This expression has type int but an expression was expected of type
         'a list
